[package]
name = "hardy-file-service"
description = "A FIFO-based file service for sending and receiving bundle payloads"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["dtn", "bpv7", "service", "fifo", "bundle-protocol"]
categories = ["network-programming"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde", "hardy-bpa/serde", "hardy-bpv7/serde"]
instrument = ["tracing/attributes"]

[dependencies]
hardy-async = { version = "0.1", path = "../async" }
hardy-bpa = { version = "0.1", path = "../bpa" }
hardy-bpv7 = { version = "0.5", path = "../bpv7" }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["macros", "io-util", "net", "fs", "time"] }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
nix = { version = "0.30", features = ["fs"] }
time = { version = "0.3", default-features = false }
