[package]
name = "hardy-bpa-server"
description = "A BPv7 DTN Bundle processing agent"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "hardy-bpa-server"
path = "src/main.rs"

[features]
default = ["sqlite-storage", "localdisk-storage"]
sqlite-storage = ["dep:hardy-sqlite-storage"]
localdisk-storage = ["dep:hardy-localdisk-storage"]
packaged-installation = []

[dependencies]
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
hardy-proto = { path = "../proto" }
hardy-sqlite-storage = { path = "../sqlite-storage", optional = true }
hardy-localdisk-storage = { path = "../localdisk-storage", optional = true }
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-util = "0.7.11"
tonic = "0.13.0"
config = { version = "0.15.4", features = ["toml"] }
serde = { version = "1.0.210", features = ["derive"] }
getopts = "0.2.21"
directories = "6.0.0"
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["parsing"] }
rand = "0.9.0"
cfg-if = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
tokio-stream = "0.1.15"
prost-types = "0.13"
notify-debouncer-full = "0.4.0"
notify = { version = "7.0.0", default-features = false, features = [
    "macos_kqueue",
] }
trace-err = "0.1.1"
sha2 = "0.10.8"
anyhow = "1.0.95"

[build-dependencies]
built = "0.8.0"
