[package]
name = "hardy-localdisk-storage"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["mmap"]
mmap = ["dep:memmap2"]
serde = ["dep:serde","hardy-bpa/serde"]
tracing = ["hardy-bpa/tracing"]

[dependencies]
hardy-bpa = { path = "../bpa" }
tokio = { version = "1.48.0", features = ["fs"] }
rand = "0.9.2"
directories = "6.0.0"
tracing = "0.1.43"
time = "0.3.44"
trace-err = "0.1.5"
flume = "0.11.1"
memmap2 = { version = "0.9.9", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }
