[package]
name = "hardy-localdisk-storage"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "storage", "filesystem"]
categories = ["network-programming", "filesystem"]
exclude = ["docs/"]
description = "Local filesystem bundle storage backend for Hardy BPA"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
mmap = ["dep:memmap2"]
serde = ["dep:serde","hardy-bpa/serde"]
instrument = ["tracing/attributes"]

[dependencies]
hardy-bpa = { path = "../bpa" }
tokio = { version = "1.51.1", features = ["fs"] }
rand = "0.10.0"
directories = "6.0.0"
tracing = { version = "0.1.44", default-features = false }
time = "0.3.47"
trace-err = "1.0.0"
memmap2 = { version = "0.9.10", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
flume = "0.12.0"
tempfile = "3"
tokio = { version = "1.51.1", features = ["rt", "macros"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.184"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase"] }
