[package]
name = "hardy-otel"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
tracing = { version = "0.1.44", default-features = false }
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "trace", "metrics", "logs", "internal-logs"] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
metrics = "0.24.3"
dashmap = "6.1.0"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "time"] }
