[package]
name = "hardy-otel"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["opentelemetry", "metrics", "tracing", "observability"]
categories = ["development-tools::profiling"]
exclude = ["docs/"]
description = "OpenTelemetry integration for Hardy DTN components"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
tracing = { version = "0.1", default-features = false }
opentelemetry = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace", "metrics", "logs", "internal-logs"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
