[package]
name = "hardy-plugin-abi"
description = "ABI boundary types and plugin loading for Hardy BPA plugins"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
host = ["dep:libloading", "dep:hardy-bpa", "dep:tokio", "dep:hardy-bpv7", "dep:flume"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tracing = "0.1.44"

# Host-side only (for loading plugins and apartment proxy)
libloading = { version = "0.8", optional = true }
hardy-bpa = { path = "../bpa", optional = true }
hardy-bpv7 = { path = "../bpv7", optional = true }
tokio = { version = "1.50.0", features = ["rt"], optional = true }
flume = { version = "0.12.0", optional = true }

[build-dependencies]
rustc_version = "0.4"
