[package]
name = "hardy-postgres-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
tracing = []

[dependencies]
hardy-bpa = { path = "../bpa", features = ["serde", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio", "migrate", "time", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["std"] }
trace-err = "1.0"
tracing = "0.1"
