[package]
name = "hardy-postgres-storage"
description = "PostgreSQL metadata storage backend for Hardy BPA"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "storage", "postgresql"]
categories = ["network-programming", "database"]
exclude = ["docs/"]

[features]
default = []
instrument = ["tracing/attributes"]

[dependencies]
hardy-bpa = { version = "0.1", path = "../bpa", features = ["serde", "tokio"] }
hardy-bpv7 = { version = "0.5", path = "../bpv7", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "migrate", "macros", "time", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["std"] }
trace-err = "1.0"
tracing = { version = "0.1", default-features = false }
