[package]
name = "hardy-proto"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]
tracing = []

[dependencies]
hardy-async = { path = "../async" }
hardy-bpv7 = { path = "../bpv7" }
hardy-bpa = { path = "../bpa" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.15"
tonic = "0.14.4"
tonic-prost = "0.14.4"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", optional = true }
time = "0.3.47"
tracing = "0.1.44"

[build-dependencies]
tonic-prost-build = "0.14.4"
