[package]
name = "hardy-proto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "grpc", "protobuf", "tonic"]
categories = ["network-programming"]
exclude = ["docs/"]
description = "gRPC proxy infrastructure for Hardy BPA components"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]
instrument = ["tracing/attributes"]

[dependencies]
hardy-async = { path = "../async" }
hardy-bpv7 = { path = "../bpv7" }
hardy-bpa = { path = "../bpa" }
hardy-eid-patterns = { path = "../eid-patterns" }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-health = "0.14"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", optional = true }
time = "0.3"
tracing = { version = "0.1", default-features = false }

[build-dependencies]
tonic-prost-build = "0.14"
