[package]
name = "hardy-s3-storage"
description = "S3-compatible bundle storage backend for Hardy BPA"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "storage", "s3", "aws"]
categories = ["network-programming"]
exclude = ["docs/"]

[features]
default = []
instrument = ["tracing/attributes"]
serde = ["dep:serde"]

[dependencies]
hardy-bpa = { version = "0.1", path = "../bpa" }
aws-config = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
time = { version = "0.3", features = ["std"] }
tracing = { version = "0.1", default-features = false }
uuid = { version = "1", features = ["v4"] }
