[package]
name = "hardy-sqlite-storage"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
tracing = []

[dependencies]
hardy-bpa = { path = "../bpa", features = ["serde"] }
hardy-bpv7 = { path = "../bpv7", features = ["std","serde"] }
hardy-cbor = { path = "../cbor" }
rusqlite = { version = "0.38.0", features = ["bundled", "time"] }
tokio = "1.49.0"
thiserror = "2.0.18"
directories = "6.0.0"
tracing = "0.1.44"
time = "0.3.47"
trace-err = "1.0.0"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.149"

[build-dependencies]
regex = "1.12.3"
sha1 = "0.10.6"
base64 = "0.22.1"
