[package]
name = "hardy-sqlite-storage"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
instrument = ["tracing/attributes"]

[dependencies]
hardy-bpa = { path = "../bpa", features = ["serde"] }
hardy-bpv7 = { path = "../bpv7", features = ["std","serde"] }
hardy-cbor = { path = "../cbor" }
rusqlite = { version = "0.39.0", features = ["array", "bundled", "time"] }
tokio = "1.51.1"
thiserror = "2.0.18"
directories = "6.0.0"
tracing = { version = "0.1.44", default-features = false }
time = "0.3.47"
trace-err = "1.0.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.149"

[dev-dependencies]
flume = "0.12.0"
tempfile = "3"
time = { version = "0.3.47", features = ["std"] }
tokio = { version = "1.51.1", features = ["rt", "macros"] }

[build-dependencies]
regex = "1.12.3"
sha1 = "0.11.0"
base64 = "0.22.1"
