[package]
name = "hardy-sqlite-storage"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "storage", "sqlite"]
categories = ["network-programming", "database"]
exclude = ["docs/"]
description = "SQLite metadata storage backend for Hardy BPA"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
instrument = ["tracing/attributes"]

[dependencies]
hardy-bpa = { version = "0.1", path = "../bpa", features = ["serde"] }
hardy-bpv7 = { version = "0.5", path = "../bpv7", features = ["std","serde"] }
hardy-cbor = { version = "1", path = "../cbor" }
rusqlite = { version = "0.39", features = ["array", "bundled", "time"] }
tokio = "1"
thiserror = "2"
directories = "6"
tracing = { version = "0.1", default-features = false }
time = "0.3"
trace-err = "1"
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
flume = "0.12"

[dev-dependencies]
flume = "0.12"
tempfile = "3"
time = { version = "0.3", features = ["std"] }
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
regex = "1"
sha1 = "0.11"
base64 = "0.22"
