[package]
name = "hardy-tcpcl"
description = "A TCPCLv4 DTN convergence layer"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "hardy-tcpcl"
path = "src/main.rs"

# For fuzzing only!
[lib]
path = "src/fuzzing.rs"
test = false
doc = false
bench = false
crate-type = ["rlib"]

[features]
packaged-installation = []

[dependencies]
hardy-bpv7 = { path = "../bpv7" }
hardy-proto = { path = "../proto" }
fuzz-macros = { path = "../fuzz-macros" }
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = "0.7.11"
tonic = "0.12.3"
prost-types = "0.13"
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.210", features = ["derive"] }
getopts = "0.2.21"
directories = "5.0.1"
time = { version = "0.3.36", features = ["macros", "parsing"] }
cfg-if = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
trace-err = "0.1.0"
thiserror = "1.0.63"
futures = "0.3"
tower = "0.4.13"
tokio-tower = "0.6.0"

[build-dependencies]
built = "0.7.4"
