[package]
name = "hardy-tcpcl"
description = "A TCPCLv4 DTN convergence layer"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "hardy-tcpcl"
path = "src/main.rs"

# For fuzzing only!
[lib]
path = "src/fuzzing.rs"
test = false
doc = false
bench = false
crate-type = ["rlib"]

[features]
packaged-installation = []

[dependencies]
hardy-bpv7 = { path = "../bpv7" }
hardy-proto = { path = "../proto" }
fuzz-macros = { path = "../fuzz-macros" }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = "0.7.13"
tonic = "0.12.3"
prost-types = "0.13"
config = { version = "0.15.9", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
getopts = "0.2.21"
directories = "6.0.0"
time = { version = "0.3.39", features = ["macros", "parsing"] }
cfg-if = "1.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"
trace-err = "0.1.2"
thiserror = "2.0.12"
futures = "0.3"
tower = "0.5.2"
tokio-tower = "0.6.0"

[build-dependencies]
built = "0.7.7"
