[package]
name = "hardy-tcpclv4-server"
version = "0.1.0"
description = "Standalone TCPCLv4 Server executable"
edition.workspace = true

[features]
default = []
otel = ["dep:hardy-otel"]
instrument = [
    "tracing/attributes",
    "hardy-bpa/instrument",
    "hardy-tcpclv4/instrument",
    "hardy-proto/instrument",
]

[dependencies]
hardy-tcpclv4 = { path = "../tcpclv4", features = ["serde"] }
hardy-bpa = { path = "../bpa" }
hardy-proto = { path = "../proto" }
hardy-async = { path = "../async" }
hardy-otel = { path = "../otel", optional = true }
tokio = { version = "1.51", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trace-err = "1.0.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15.22", features = ["toml"] }
