[package]
name = "hardy-tcpclv4-server"
version = "0.1.0"
description = "Standalone TCPCLv4 Server executable"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
otel = ["dep:hardy-otel"]
instrument = [
    "tracing/attributes",
    "hardy-bpa/instrument",
    "hardy-tcpclv4/instrument",
    "hardy-proto/instrument",
]

[dependencies]
hardy-tcpclv4 = { version = "0.3", path = "../tcpclv4", features = ["serde"] }
hardy-bpa = { version = "0.1", path = "../bpa" }
hardy-proto = { version = "0.1", path = "../proto" }
hardy-async = { version = "0.1", path = "../async" }
hardy-otel = { version = "0.1", path = "../otel", optional = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trace-err = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", features = ["yaml", "toml", "json"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"