[package]
name = "hardy-tcpclv4"
description = "A TCPCLv4 DTN convergence layer"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]
tracing = ["hardy-async/tracing"]

[dependencies]
hardy-async = { path = "../async" }
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["macros", "time", "net", "io-util"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tower = { version = "0.5.3", features = ["util", "limit"] }
trace-err = "0.1.5"
spin = "0.9.8"
thiserror = "2.0.18"
futures = "0.3"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
rustls = "0.23.36"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
