[package]
name = "hardy-tcpclv4"
description = "A TCPCLv4 DTN convergence layer"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "tcpclv4", "rfc9174", "convergence-layer"]
categories = ["network-programming"]
exclude = ["docs/"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]
instrument = ["tracing/attributes"]

[dependencies]
hardy-async = { path = "../async" }
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", features = ["macros", "time", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = { version = "0.5", features = ["util", "limit"] }
metrics = "0.24"
trace-err = "1"
thiserror = "2"
futures = "0.3"
rand = "0.10"
serde = { version = "1", features = ["derive"], optional = true }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
