[package]
name = "hardy-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DTN network diagnostic tools"
publish = false

[lib]
path = "lib/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "bp"
path = "src/bp.rs"

[features]
default = []
instrument = ["hardy-bpa/instrument","hardy-tcpclv4/instrument"]

[dependencies]
anyhow = "1.0.102"
hardy-async = { path = "../async" }
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7", features = ["std"] }
hardy-cbor = { path = "../cbor" }
hardy-proto = { path = "../proto" }
hardy-tcpclv4 = { path = "../tcpclv4" }
clap = { version = "4.6.0", features = ["derive"] }
humantime = "2.3.0"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "time", "signal", "process"] }
tokio-util = "0.7.18"
time = { version = "0.3.47", features = ["parsing"] }
rand = "0.10.0"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = "0.3.23"
trace-err = "1.0.0"

# --- Linux-specific dependencies ---
[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.6"

# --- Windows-specific dependencies ---
[target.'cfg(target_os = "windows")'.dependencies]
check_elevation = "0.2.7"

# --- Other Unix (e.g., macOS, BSD) dependencies ---
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2.184"
