[package]
name = "hardy-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DTN network diagnostic tools"
publish = false

[lib]
path = "lib/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "bp"
path = "src/bp.rs"

[features]
default = []
instrument = ["hardy-bpa/instrument","hardy-tcpclv4/instrument"]

[dependencies]
anyhow = "1"
hardy-async = { version = "0.1", path = "../async" }
hardy-bpa = { version = "0.1", path = "../bpa" }
hardy-bpv7 = { version = "0.5", path = "../bpv7", features = ["std"] }
hardy-cbor = { version = "1", path = "../cbor" }
hardy-proto = { version = "0.1", path = "../proto" }
hardy-tcpclv4 = { version = "0.3", path = "../tcpclv4" }
clap = { version = "4", features = ["derive"] }
humantime = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time", "signal", "process"] }
tokio-util = "0.7"
time = { version = "0.3", features = ["parsing"] }
rand = "0.10"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
trace-err = "1"

# --- Linux-specific dependencies ---
[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

# --- Windows-specific dependencies ---
[target.'cfg(target_os = "windows")'.dependencies]
check_elevation = "0.2"

# --- Other Unix (e.g., macOS, BSD) dependencies ---
[target.'cfg(all(unix, not(target_os = "linux")))'.dependencies]
libc = "0.2"
