[package]
name = "hardy-tvr"
version = "0.1.0"
description = "Time-Variant Routing agent for Hardy DTN"
edition.workspace = true

[[bin]]
name = "hardy-tvr"
path = "src/main.rs"

[features]
default = []
otel = ["dep:hardy-otel"]
instrument = ["hardy-async/instrument"]

[dependencies]
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
hardy-proto = { path = "../proto" }
hardy-async = { path = "../async" }
hardy-eid-patterns = { path = "../eid-patterns" }
hardy-otel = { path = "../otel", optional = true }
tokio = { version = "1.51", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.15.22", features = ["yaml", "toml", "json"] }
time = { version = "0.3", features = ["parsing"] }
chumsky = "0.12.0"
humantime = "2.3.0"
flume = "0.12.0"
metrics = "0.24.3"
notify-debouncer-full = "0.7.0"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tokio-stream = "0.1"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
time = { version = "0.3", features = ["macros"] }

[build-dependencies]
tonic-prost-build = "0.14.5"
