[package]
name = "hardy-tvr"
version = "0.1.0"
description = "Time-Variant Routing agent for Hardy DTN"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "hardy-tvr"
path = "src/main.rs"

[features]
default = []
otel = ["dep:hardy-otel"]
instrument = ["hardy-async/instrument"]

[dependencies]
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
hardy-proto = { path = "../proto" }
hardy-async = { path = "../async" }
hardy-eid-patterns = { path = "../eid-patterns" }
hardy-otel = { path = "../otel", optional = true }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", features = ["yaml", "toml", "json"] }
time = { version = "0.3", features = ["parsing"] }
chumsky = "0.12"
humantime = "2"
flume = "0.12"
metrics = "0.24"
notify-debouncer-full = "0.7"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio-stream = "0.1"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
time = { version = "0.3", features = ["macros"] }

[build-dependencies]
tonic-prost-build = "0.14"
