[package]
name = "hardy-bpa-core-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.hardy-bpa-core]
path = ".."

[[bin]]
name = "eid"
path = "fuzz_targets/eid.rs"
test = false
doc = false
bench = false
