[package]
name = "hardy-bpa-core-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hardy-bpa-core = { path = ".." }
hardy-cbor = { path = "../../cbor" }

[[bin]]
name = "eid_str"
path = "fuzz_targets/eid_str.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eid_cbor"
path = "fuzz_targets/eid_cbor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eid_pattern_str"
path = "fuzz_targets/eid_pattern_str.rs"
test = false
doc = false
bench = false
